--- a/com.kubelt.lib.promise.html
+++ b/com.kubelt.lib.promise.html
@@ -186,7 +186,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Resolves when all promise values in the map resolve. The resolved value will e a map with the same keys as the input map, but with the resolved values of the promises. Rejects with first error if any promise rejects. Like Promise.all() but for Maps.</p><p>Google Clojure library promise utilities:   https://google.github.io/closure-library/api/goog.async.promises.html JavaScript native Maps:   https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map</p>
+					<p>Resolves when all promise values in the map resolve. The resolved value will be a map with the same keys as the input map, but with the resolved values of the promises. Rejects with first error if any promise rejects. Like Promise.all() but for Maps.</p><p>Google Clojure library promise utilities:   https://google.github.io/closure-library/api/goog.async.promises.html JavaScript native Maps:   https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn all-map
