--- a/index.html
+++ b/index.html
@@ -349,6 +349,9 @@
 								<a href="com.kubelt.ddt.cmds.wallet.html">com.kubelt.ddt.cmds.wallet</a>
 							</li>
 							<li>
+								<a href="com.kubelt.ddt.cmds.wallet.import.html">com.kubelt.ddt.cmds.wallet.import</a>
+							</li>
+							<li>
 								<a href="com.kubelt.ddt.cmds.wallet.init.html">com.kubelt.ddt.cmds.wallet.init</a>
 							</li>
 							<li>
