--- a/com.kubelt.lib.config.util.html
+++ b/com.kubelt.lib.config.util.html
@@ -72,7 +72,7 @@
 					<p>Convert a JavaScript configuration object to a Clojure config map.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">#?(:node
+					<pre class="brush: clojure">#?(:cljs
    (defn obj-&gt;map
      [o]
      {:pre [(object? o)]}
