--- a/init.cljc.html
+++ b/init.cljc.html
@@ -418,6 +418,8 @@
 				<td class="codes">
 					<pre class="brush: clojure">(defn init
   [system-config]
+  ;; NB: If we provide an additional collection of keys when calling
+  ;; integrant.core/init, only those keys will be initialized.
   (ig/init system-config))</pre>
 				</td>
 			</tr>
