--- a/com.kubelt.ddt.cmds.wallet.rm.html
+++ b/com.kubelt.ddt.cmds.wallet.rm.html
@@ -41,6 +41,7 @@
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.ddt.util :as ddt.util]
+   [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
 			</tr>
@@ -59,30 +60,32 @@
               (let [args-map (ddt.options/to-map args)
                     app-name (get args-map :app-name)
                     wallet-name (get args-map :name)]
-                ;; Check that the wallet to remove exists.
-                (when-not (lib.wallet/has-wallet? app-name wallet-name)
-                  (let [message (str &quot;wallet '&quot; wallet-name &quot;' doesn't exist&quot;)]
-                    (println (str &quot;error: &quot; message))
-                    (.exit process 1)))
-                ;; We only remove the wallet if the user can supply the
-                ;; password that decrypts it.
-                (ddt.prompt/ask-password!
-                 (fn [err result]
-                   (ddt.util/exit-if err)
-                   (let [password (.-password result)]
-                     ;; Check that password is correct (can decrypt wallet).
-                     (when-not (lib.wallet/can-decrypt? app-name wallet-name password)
-                       (let [message (str &quot;password for '&quot; wallet-name &quot;' is incorrect&quot;)]
-                         (println (str &quot;error: &quot; message))
-                         (.exit process 1)))
-                     ;; Prompt the user to confirm that they want to
-                     ;; remove the wallet.
-                     (ddt.prompt/confirm-rm!
-                      (fn [err rm?]
-                        (ddt.util/exit-if err)
-                        (when rm?
-                          (lib.wallet/delete! app-name wallet-name)
-                          (println &quot;removed wallet&quot; wallet-name)))))))))})</pre>
+                (lib.promise/promise
+                 (fn [resolve reject]
+                   ;; Check that the wallet to remove exists.
+                   (when-not (lib.wallet/has-wallet? app-name wallet-name)
+                     (let [message (str &quot;error: wallet '&quot; wallet-name &quot;' doesn't exist&quot;)]
+                       (reject message)))
+                   ;; We only remove the wallet if the user can supply the
+                   ;; password that decrypts it.
+                   (ddt.prompt/ask-password!
+                    (fn [err result]
+                      (ddt.util/exit-if err)
+                      (let [password (.-password result)]
+                        ;; Check that password is correct (can decrypt wallet).
+                        (when-not (lib.wallet/can-decrypt? app-name wallet-name password)
+                          (let [message (str &quot;password for '&quot; wallet-name &quot;' is incorrect&quot;)]
+                            (println (str &quot;error: &quot; message))
+                            (.exit process 1)))
+                        ;; Prompt the user to confirm that they want to
+                        ;; remove the wallet.
+                        (ddt.prompt/confirm-rm!
+                         (fn [err rm?]
+                           (ddt.util/exit-if err)
+                           (when rm?
+                             (lib.wallet/delete! app-name wallet-name)
+                             (println &quot;removed wallet&quot; wallet-name)
+                             (resolve)))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
