--- a/com.kubelt.lib.http.node.html
+++ b/com.kubelt.lib.http.node.html
@@ -134,7 +134,7 @@
 					<pre class="brush: clojure">(defrecord HttpClient []
   proto.http/HttpClient
   (request!
-    [this request]
+    [_ request]
     (promise
      (fn [resolve reject]
        (if-not (malli/validate spec.http/request request)
@@ -151,10 +151,12 @@
                node-req (.request request-mod options on-response)]
            (when (or (http.request/post? request)
                      (http.request/put? request))
-             (if-let [data (get request-map :http/body)]
+             (when-let [data (get request-map :http/body)]
                (.write node-req data)))
            (doto node-req
-             (.on &quot;error&quot; on-error)
+             (.on &quot;error&quot; (fn [e]
+                            (reject e)
+                            on-error))
              (.end))))))))</pre>
 				</td>
 			</tr>
