--- a/index.html
+++ b/index.html
@@ -520,6 +520,9 @@
 								<a href="init.cljc.html">init.cljc</a>
 							</li>
 							<li>
+								<a href="integrant.cljc.html">integrant.cljc</a>
+							</li>
+							<li>
 								<a href="com.kubelt.lib.io.bag.html">com.kubelt.lib.io.bag</a>
 							</li>
 							<li>
