--- a/client.cljc.html
+++ b/client.cljc.html
@@ -342,9 +342,7 @@
                        :ipfs.node/version node-version
                        :ipfs.node/protocol node-proto-version
                        :ipfs.node/addresses node-addresses
-                       :ipfs.node/protocols node-protocols})))
-           (.catch (fn [e]
-                     {}))))))</pre>
+                       :ipfs.node/protocols node-protocols})))))))</pre>
 				</td>
 			</tr>
 			<tr>
