--- a/com.kubelt.ddt.cmds.wallet.ls.html
+++ b/com.kubelt.ddt.cmds.wallet.ls.html
@@ -41,6 +41,7 @@
    [com.kubelt.ddt.color :as ddt.color]
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
+   [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
 			</tr>
@@ -58,10 +59,13 @@
    :handler (fn [args]
               (let [args-map (ddt.options/to-map args)
                     app-name (get args-map :app-name)]
-                (doseq [wallet-name (lib.wallet/ls app-name)]
-                  (let [arrow (ddt.color/hilite &quot;-&gt;&quot;)
-                        wallet-line (cstr/join &quot; &quot; [arrow wallet-name])]
-                    (println wallet-line)))))})</pre>
+                (lib.promise/promise
+                 (fn [resolve reject]
+                   (doseq [wallet-name (lib.wallet/ls app-name)]
+                     (let [arrow (ddt.color/hilite &quot;-&gt;&quot;)
+                           wallet-line (cstr/join &quot; &quot; [arrow wallet-name])]
+                       (println wallet-line)))
+                   (resolve)))))})</pre>
 				</td>
 			</tr>
 			<tr>
