--- a/com.kubelt.sdk.v1.html
+++ b/com.kubelt.sdk.v1.html
@@ -43,7 +43,7 @@
    [com.kubelt.lib.config.util :as lib.config.util]
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.init :as lib.init]
-   [com.kubelt.lib.promise :refer [promise promise?]]
+   [com.kubelt.lib.promise :as lib.promise :refer [promise?]]
    [com.kubelt.spec.config :as spec.config])
   (:require-macros
    [com.kubelt.spec :as kspec]))</pre>
@@ -73,28 +73,19 @@
 					<pre class="brush: clojure">(defn init
   ;; The 0-arity implementation uses the default configuration.
   ([]
+   {:post (promise? %)}
    (init {}))
   ;; The 1-arity implementation expects a configuration map.
   ([config]
-   {:pre [(map? config)] :post [(map? %)]}
+   {:pre [(map? config)]}
    ;; Check that the user-provided options map is valid. If not, an
    ;; error map is returned. Note that these configuration options are
    ;; not required, so we provide defaults for those values that aren't
    ;; provided.
-   (kspec/conform
-    spec.config/optional-sdk-config config
-    (let [sdk-config (merge lib.config.default/sdk config)]
-      ;; Check that the final options map (defaults combined with
-      ;; user-provided options) is valid.
-      (kspec/conform
-       spec.config/sdk-config sdk-config
-       (let [;; Construct a system configuration map from the default
-             ;; configuration combined with the options provided by the
-             ;; user.
-             system-config (lib.config.system/config lib.config.default/system sdk-config)]
-         (kspec/conform
-          spec.config/system-config system-config
-          (lib.init/init system-config))))))))</pre>
+   (let [system-config (lib.config.system/config-&gt;system config)]
+     (lib.promise/promise
+      (fn [resolve reject]
+        (lib.init/init system-config resolve reject))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -111,12 +102,12 @@
   ([config]
    {:pre [(object? config)] :post [(promise? %)]}
    (let [config (lib.config.util/obj-&gt;map config)]
-     (promise
-      (fn [resolve reject]
-        (let [result (init config)]
-          (if (lib.error/error? result)
-            (reject (clj-&gt;js result))
-            (resolve result))))))))</pre>
+     (-&gt; (init config)
+         ;; If an error occurred, convert the returned error map into an
+         ;; JavaScript object.
+         (lib.promise/catch
+          (fn [e]
+            (clj-&gt;js e)))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -129,15 +120,18 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Shutdown the SDK. Takes the system description returned by calling (init) as the system to halt.</p>
+					<p>Shutdown the SDK. Takes the system description returned by calling (init) as the system to halt. Returns a promise/future that resolves when the shutdown is complete, or rejects with an error map describing the problem that occurred.</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn halt!
   [system]
   {:pre [(map? system)]}
-  (if-not (lib.error/error? system)
-    (lib.init/halt! system)
-    true))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (let [result (lib.init/halt! system)]
+       (if-not (lib.error/error? result)
+         (resolve result)
+         (reject result))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -148,12 +142,10 @@
 					<pre class="brush: clojure">(defn halt-js!
   [system]
   {:pre [(map? system)] :post [(promise? %)]}
-  (promise
-   (fn [resolve reject]
-     (let [result (halt! system)]
-       (if (lib.error/error? result)
-         (reject (clj-&gt;js result))
-         (resolve result))))))</pre>
+  (-&gt; (halt! system)
+      (lib.promise/catch
+          (fn [e]
+            (clj-&gt;js e)))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -172,7 +164,12 @@
 					<pre class="brush: clojure">(defn options
   [system]
   {:pre [(map? system)]}
-  (lib.config.sdk/options system))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (let [result (lib.config.sdk/options system)]
+       (if-not (lib.error/error? result)
+         (resolve result)
+         (reject result))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -183,12 +180,13 @@
 					<pre class="brush: clojure">(defn options-js
   [system]
   {:pre [(map? system)] :post [(promise? %)]}
-  (promise
-   (fn [resolve reject]
-     (let [result (options system)]
-       (if (lib.error/error? result)
-         (reject (clj-&gt;js result))
-         (resolve (clj-&gt;js result)))))))</pre>
+  (-&gt; (options system)
+      (lib.promise/then
+       (fn [m]
+         (clj-&gt;js m)))
+      (lib.promise/catch
+          (fn [e]
+            (clj-&gt;js e)))))</pre>
 				</td>
 			</tr>
 			<tr>
