deploy: 8090e3b2520d28a9b47ecee096ac3540cfd99f18

--- a/com.kubelt.lib.jwk.html
+++ b/com.kubelt.lib.jwk.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">main.com.kubelt.lib.jwk</h1>
+							<h1 class="project-name">com.kubelt.lib.jwk</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -31,7 +31,7 @@
 					<p>JSON Web Key implementation</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns main.com.kubelt.lib.jwk
+					<pre class="brush: clojure">(ns com.kubelt.lib.jwk
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;})</pre>
 				</td>
 			</tr>
