--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 								<a href="json.cljc.html">json.cljc</a>
 							</li>
 							<li>
-								<a href="main.com.kubelt.lib.jwk.html">main.com.kubelt.lib.jwk</a>
+								<a href="com.kubelt.lib.jwk.html">com.kubelt.lib.jwk</a>
 							</li>
 							<li>
 								<a href="jwt.cljc.html">jwt.cljc</a>
